[f/562-i18n] Translations : Connections and Apps

--- a/BrightID/translations/english.json
+++ b/BrightID/translations/english.json
@@ -63,29 +63,54 @@
   "qrcode.text.confirmConnections": "Confirm Connections",
   
 
-  "connections.text.waitingConfirmation": "Waiting for {{name}} to confirm ...",
-  "connections.text.zeroPendingConnections": "Waiting for more connections",
-  "connections.text.pendingConnections": "Waiting for {{name}} to confirm you.",
-  "connections.text.pendingConnections_plural": "Waiting for {{count}} connections to confirm you.",
-  "connections.button.returnHome": "Return Home",
-  "connections.text.errorGeneric": "There was an error, please try connecting with {{name}} again...",
-  "connections.text.errorMyself": "OOPS!!! This is you...",
-  "connections.text.errorExpired": "The QRCode used to connect with {{name}} has expired... please try connecting again.",
-  "connections.text.waiting": "Waiting for data from the profile service",
-  "connections.text.connectWith": "Connect with?",
-  "connections.tag.newUser": "New User",
-  "connections.tag.alreadyConnected": "(already connected)",
-  "connections.label.connections": "Connections",
-  "connections.label.groups": "Groups",
-  "connections.label.mutualConnections": "Mutual Connec...",
-  "connections.button.ignore": "Ignore",
-  "connections.button.reject": "Reject",
-  "connections.button.updateProfile": "Update Profile",
-  "connections.button.confirm": "Confirm",
-  "connections.alert.title.expired": "Try connecting again...",
-  "connections.alert.text.expired": "The QRCode used to connect has expired...",
-  "connections.accessibilityLabel.reject": "reject connection with {{name}}",
-  "connections.accessibilityLabel.confirm": "accept connection with {{name}}",
+  "pendingConnections.text.waitingConfirmation": "Waiting for {{name}} to confirm ...",
+  "pendingConnections.text.zeroPendingConnections": "Waiting for more connections",
+  "pendingConnections.text.pendingConnections": "Waiting for {{name}} to confirm you.",
+  "pendingConnections.text.pendingConnections_plural": "Waiting for {{count}} connections to confirm you.",
+  "pendingConnections.button.returnHome": "Return Home",
+  "pendingConnections.text.errorGeneric": "There was an error, please try connecting with {{name}} again...",
+  "pendingConnections.text.errorMyself": "OOPS!!! This is you...",
+  "pendingConnections.text.errorExpired": "The QRCode used to connect with {{name}} has expired... please try connecting again.",
+  "pendingConnections.text.waiting": "Waiting for data from the profile service",
+  "pendingConnections.text.connectWith": "Connect with?",
+  "pendingConnections.tag.newUser": "New User",
+  "pendingConnections.tag.alreadyConnected": "(already connected)",
+  "pendingConnections.label.connections": "Connections",
+  "pendingConnections.label.groups": "Groups",
+  "pendingConnections.label.mutualConnections": "Mutual Connec...",
+  "pendingConnections.button.ignore": "Ignore",
+  "pendingConnections.button.reject": "Reject",
+  "pendingConnections.button.updateProfile": "Update Profile",
+  "pendingConnections.button.confirm": "Confirm",
+  "pendingConnections.alert.title.expired": "Try connecting again...",
+  "pendingConnections.alert.text.expired": "The QRCode used to connect has expired...",
+  "pendingConnections.accessibilityLabel.reject": "reject connection with {{name}}",
+  "pendingConnections.accessibilityLabel.confirm": "accept connection with {{name}}",
+
+
+  "connections.text.noConnections": "No connections",
+  "connections.placeholder.searchConnections": "Search Connections",
+  "connections.button.flag": "Flag",
+  "connections.flagActionSheet.infoFlagImpact": "Flagging {{name}} will negatively effect their BrightID score, and this flag might be shown to other users.",
+  "connections.flagActionSheet.duplicate": "Flag as Duplicate",
+  "connections.flagActionSheet.fake": "Flag as Fake",
+  "connections.flagActionSheet.deceased": "Flag as Deceased",
+  "connections.flagActionSheet.joinAllGroups": "Joins All Groups",
+  "connections.flagActionSheet.connectsToFake": "Connects to other fake connections",
+  "connections.button.unflag": "Unflag",
+  "connection.unflagActionSheet.title": "Try Again Later!",
+  "connection.unflagActionSheet.info": "This feature is not ready yet.",
+  "connections.button.remove": "Supprimer",
+  "connections.removeActionSheet.title": "Remove connection",
+  "connections.removeActionSheet.info": "Are you sure you want to remove connection with {{name}}? You can reconnect anytime.",
+  "connections.removeActionSheet.remove": "Remove",
+  
+
+  "connectionsSearch.header.sorting": "Sorting",
+  "connectionsSearch.button.save": "Save",
+  "connectionsSearch.text.chooseSortMethod": "Choose one of the methods below",
+  "connectionsSearch.button.sortByDate": "Sort by date added",
+  "connectionsSearch.button.sortByName": "Sort by name",
 
 
   "groups.title.groups": "Groups",
@@ -125,10 +150,25 @@
   "createGroup.alert.text.nameTooShort": "The group name must be at least 2 characters",
 
 
+  "apps.text.noApps": "No Apps",
+  "apps.text.pendingLink": "Linking your account in {{context}}\n to your BrightID ...",
+  "apps.text.notSponsored": "You're not sponsored.\nPlease find an app below to sponsor you.",
+  "apps.tag.hasSponsorships": "Has sponsorships",
+  "apps.tag.notVerifiedForApp": "Non-vérifié pour cette application",
+  "apps.tag.linked": "Linked",
+  "apps.tag.tryAgain": "Try Again",
+  "apps.alert.title.invalidContext": "Failed",
+  "apps.alert.text.invalidContext": "{{context}} is not a valid context!",
+  "apps.alert.text.checkWebsite": "To find out more about {{name}}, check out their website!",
+  "apps.alert.sure": "Sure",
+
+
   "common.alert.error": "Error",
   "common.alert.formIncomplete": "BrightID Form Incomplete",
   "common.alert.ok": "OK",
   "common.alert.cancel": "Cancel",
+  "common.alert.yes": "Yes",
+  "common.alert.no": "No",
   "common.photoActionSheet.title": "Select photo",
   "common.photoActionSheet.takePhoto": "Take Photo",
   "common.photoActionSheet.choosePhoto": "Choose From Library",
