--- a/BrightID/translations/french.json
+++ b/BrightID/translations/french.json
@@ -63,29 +63,54 @@
   "qrcode.text.confirmConnections": "Confirmation des connexions",
 
 
-  "connections.text.waitingConfirmation": "En attente de confirmation de {{name}}...",
-  "connections.text.zeroPendingConnections": "En attente de connexions",
-  "connections.text.pendingConnections": "En attente de confirmation de {{name}}.",
-  "connections.text.pendingConnections_plural": "En attente de confirmation de {{count}} connexions.",
-  "connections.button.returnHome": "Retour à l'Accueil",
-  "connections.text.errorGeneric": "Une erreur est survenue, veuillez essayer à nouveau de vous connecter avec {{name}}...",
-  "connections.text.errorMyself": "OUPS!!! On dirait que c'est vous...",
-  "connections.text.errorExpired": "Le code QR utilisé pour vous connecter avec {{name}} a expiré... veuillez réessayer de vous connecter.",
-  "connections.text.waiting": "En attente de données du service de profiles",
-  "connections.text.connectWith": "Vous connecter avec ?",
-  "connections.tag.newUser": "Nouvel Utilisateur",
-  "connections.tag.alreadyConnected": "(déjà connecté)",
-  "connections.label.connections": "Connexions",
-  "connections.label.groups": "Groupes",
-  "connections.label.mutualConnections": "En commun",
-  "connections.button.ignore": "Ignorer",
-  "connections.button.reject": "Refuser",
-  "connections.button.updateProfile": "Mettre à jour",
-  "connections.button.confirm": "Confirmer",
-  "connections.alert.title.expired": "Réessayez de vous connecter...",
-  "connections.alert.text.expired": "Le code QR utilisé pour vous connecter a expiré...",
-  "connections.accessibilityLabel.reject": "refuser la connexion avec {{name}}",
-  "connections.accessibilityLabel.confirm": "accepter la connexion avec {{name}}",
+  "pendingConnections.text.waitingConfirmation": "En attente de confirmation de {{name}}...",
+  "pendingConnections.text.zeroPendingConnections": "En attente de connexions",
+  "pendingConnections.text.pendingConnections": "En attente de confirmation de {{name}}.",
+  "pendingConnections.text.pendingConnections_plural": "En attente de confirmation de {{count}} connexions.",
+  "pendingConnections.button.returnHome": "Retour à l'Accueil",
+  "pendingConnections.text.errorGeneric": "Une erreur est survenue, veuillez essayer à nouveau de vous connecter avec {{name}}...",
+  "pendingConnections.text.errorMyself": "OUPS!!! On dirait que c'est vous...",
+  "pendingConnections.text.errorExpired": "Le code QR utilisé pour vous connecter avec {{name}} a expiré... veuillez réessayer de vous connecter.",
+  "pendingConnections.text.waiting": "En attente de données du service de profiles",
+  "pendingConnections.text.connectWith": "Vous connecter avec ?",
+  "pendingConnections.tag.newUser": "Nouvel Utilisateur",
+  "pendingConnections.tag.alreadyConnected": "(déjà connecté)",
+  "pendingConnections.label.connections": "Connexions",
+  "pendingConnections.label.groups": "Groupes",
+  "pendingConnections.label.mutualConnections": "En commun",
+  "pendingConnections.button.ignore": "Ignorer",
+  "pendingConnections.button.reject": "Refuser",
+  "pendingConnections.button.updateProfile": "Mettre à jour",
+  "pendingConnections.button.confirm": "Confirmer",
+  "pendingConnections.alert.title.expired": "Réessayez de vous connecter...",
+  "pendingConnections.alert.text.expired": "Le code QR utilisé pour vous connecter a expiré...",
+  "pendingConnections.accessibilityLabel.reject": "refuser la connexion avec {{name}}",
+  "pendingConnections.accessibilityLabel.confirm": "accepter la connexion avec {{name}}",
+
+
+  "connections.text.noConnections": "Aucune connexion",
+  "connections.placeholder.searchConnections": "Rechercher des Connexions",
+  "connections.button.flag": "Signaler",
+  "connections.flagActionSheet.infoFlagImpact": "Signaler {{name}} impactera négativement leur score BrightID, et ce signalement pourrait être vu par d'autres utilisateurs.",
+  "connections.flagActionSheet.duplicate": "Signaler en tant que double compte",
+  "connections.flagActionSheet.fake": "Signaler en tant que faux compte",
+  "connections.flagActionSheet.deceased": "Signaler comme décédé",
+  "connections.flagActionSheet.joinAllGroups": "Signaler comme rejoignant tous les groupes",
+  "connections.flagActionSheet.connectsToFake": "Signaler comme se connectant à des faux comptes",
+  "connections.button.unflag": "Dé-signaler",
+  "connection.unflagActionSheet.title": "Réessayez plus tard !",
+  "connection.unflagActionSheet.info": "Cette fonctionnalité n'est pas encore prête.",
+  "connections.button.remove": "Supprimer",
+  "connections.removeActionSheet.title": "Supprimer la connexion",
+  "connections.removeActionSheet.info": "Êtes-vous sûr de vouloir supprimer la connexion avec {{name}}? Vous pouvez vous reconnecter à tout moment.",
+  "connections.removeActionSheet.remove": "Supprimer",
+
+
+  "connectionsSearch.header.sorting": "Tri",
+  "connectionsSearch.button.save": "Valider",
+  "connectionsSearch.text.chooseSortMethod": "Choisissez une des méthodes ci-dessous",
+  "connectionsSearch.button.sortByDate": "Trier par date ajoutée",
+  "connectionsSearch.button.sortByName": "Trier par nom",
 
 
   "groups.title.groups": "Groupes",
@@ -125,10 +150,25 @@
   "createGroup.alert.text.nameTooShort": "Le nom du groupe doit contenir au moins 2 caractères",
 
 
+  "apps.text.noApps": "Pas d'Application",
+  "apps.text.pendingLink": "Compte BrightID en cours de liaison avec {{context}} ...",
+  "apps.text.notSponsored": "Vous n'êtes pas sponsorisé.\nVeuillez trouver une application ci-dessous pour vous sponsoriser",
+  "apps.tag.hasSponsorships": "Peut vous sponsoriser",
+  "apps.tag.notVerifiedForApp": "Non-vérifié pour cette application",
+  "apps.tag.linked": "Lié",
+  "apps.tag.tryAgain": "Veuillez réessayer",
+  "apps.alert.title.invalidContext": "Echec",
+  "apps.alert.text.invalidContext": "{{context}} n'est pas un contexte valide !",
+  "apps.alert.text.checkWebsite": "Pour en savoir davantage à propos de {{name}}, visitez leur site web !",
+  "apps.alert.sure": "Visiter",
+
+  
   "common.alert.error": "Erreur",
   "common.alert.formIncomplete": "Formulaire incomplet",
   "common.alert.ok": "OK",
   "common.alert.cancel": "Annuler",
+  "common.alert.yes": "Oui",
+  "common.alert.no": "Non",
   "common.photoActionSheet.title": "Sélectionner une photo",
   "common.photoActionSheet.takePhoto": "Prendre une Photo",
   "common.photoActionSheet.choosePhoto": "Sélectionner depuis l'Album",
