[f/562-i18n] Translations : Notifications page

--- a/BrightID/translations/french.json
+++ b/BrightID/translations/french.json
@@ -160,15 +160,40 @@
   "apps.alert.title.invalidContext": "Echec",
   "apps.alert.text.invalidContext": "{{context}} n'est pas un contexte valide !",
   "apps.alert.text.checkWebsite": "Pour en savoir davantage à propos de {{name}}, visitez leur site web !",
-  "apps.alert.sure": "Visiter",
+  "apps.alert.button.visitWebsite": "Visiter",
+
+
+  "notifications.tab.connections": "connexions",
+  "notifications.tab.groups": "groupes",
+  "notifications.tab.miscellaneous": "divers",
+  "notifications.text.noPendingConnections": "Vous n'avez pas de connexion en attente..",
+  "notifications.text.noGroupInvites": "Vous n'avez pas d'invitation à des groupes..",
+  "notifications.text.noMiscellaneous": "Rien à voir ici ...",
+  "notifications.item.title.backupBrightId": "Faites une sauvegarde de votre BrightID",
+  "notifications.item.text.backupBrightId": "Définissez vos connexions de confiance",
+  "notifications.item.text.pendingConnections": "Vous avez {{count}} connexion en attente",
+  "notifications.item.text.pendingConnections_plural": "Vous avez {{count}} connexions en attente",
+  "notifications.item.text.pendingGroupInvite": "{{name}} vous invite à rejoindre ce groupe",
+  "notifications.alert.title.rejectGroupInvite": "Refuser",
+  "notifications.alert.text.rejectGroupInvite": "Êtes-vous sûr de vouloir refuser de rejoindre ce groupe ?",
+  "notifications.alert.title.failureRejectGroupInvite": "Echec du refus de l'invitation",
+  "notifications.alert.text.successAcceptGroupInvite": "Vous avez rejoint {{groupName}}",
+  "notifications.alert.text.failureAcceptGroupInvite": "Erreur lors de la tentative de rejoindre le groupe",
 
   
+  "notificationBar.title.pendingConnection": "Confirmez vos connexions",
+  "notificationBar.text.pendingConnections": "Vous avez {{count}} connexion en attente",
+  "notificationBar.text.pendingConnections_plural": "Vous avez {{count}} connexions en attente",
+  
+  
   "common.alert.error": "Erreur",
+  "common.alert.success": "Succès",
   "common.alert.formIncomplete": "Formulaire incomplet",
   "common.alert.ok": "OK",
   "common.alert.cancel": "Annuler",
   "common.alert.yes": "Oui",
   "common.alert.no": "Non",
+  "common.alert.sure": "Oui",
   "common.photoActionSheet.title": "Sélectionner une photo",
   "common.photoActionSheet.takePhoto": "Prendre une Photo",
   "common.photoActionSheet.choosePhoto": "Sélectionner depuis l'Album",
