--- a/BrightID/translations/english.json
+++ b/BrightID/translations/english.json
@@ -104,7 +104,7 @@
   "connections.removeActionSheet.title": "Remove connection",
   "connections.removeActionSheet.info": "Are you sure you want to remove connection with {{name}}? You can reconnect anytime.",
   "connections.removeActionSheet.remove": "Remove",
-  
+
 
   "connectionsSearch.header.sorting": "Sorting",
   "connectionsSearch.button.save": "Save",
@@ -160,15 +160,40 @@
   "apps.alert.title.invalidContext": "Failed",
   "apps.alert.text.invalidContext": "{{context}} is not a valid context!",
   "apps.alert.text.checkWebsite": "To find out more about {{name}}, check out their website!",
-  "apps.alert.sure": "Sure",
+  "apps.alert.button.visitWebsite": "Sure",
+
+
+  "notifications.tab.connections": "connections",
+  "notifications.tab.groups": "groups",
+  "notifications.tab.miscellaneous": "miscellaneous",
+  "notifications.text.noPendingConnections": "You have no pending connections..",
+  "notifications.text.noGroupInvites": "You have no group invites..",
+  "notifications.text.noMiscellaneous": "Nothing to see here ...",
+  "notifications.item.title.backupBrightId": "Backup BrightID",
+  "notifications.item.text.backupBrightId": "Choose your trusted connections",
+  "notifications.item.text.pendingConnections": "You have {{count}} unconfirmed connection",
+  "notifications.item.text.pendingConnections_plural": "You have {{count}} unconfirmed connections",
+  "notifications.item.text.pendingGroupInvite": "{{name}} invited you to join",
+  "notifications.alert.title.rejectGroupInvite": "Reject",
+  "notifications.alert.text.rejectGroupInvite": "Are you sure you want to reject joining this group?",
+  "notifications.alert.title.failureRejectGroupInvite": "Failed to reject the invite",
+  "notifications.alert.text.successAcceptGroupInvite": "You joined {{groupName}}",
+  "notifications.alert.text.failureAcceptGroupInvite": "Failed to join the group",
+
+  
+  "notificationBar.title.pendingConnection": "Confirm connections",
+  "notificationBar.text.pendingConnections": "You have {{count}} pending connection",
+  "notificationBar.text.pendingConnections_plural": "You have {{count}} pending connections",
 
 
   "common.alert.error": "Error",
+  "common.alert.success": "Success",
   "common.alert.formIncomplete": "BrightID Form Incomplete",
   "common.alert.ok": "OK",
   "common.alert.cancel": "Cancel",
   "common.alert.yes": "Yes",
   "common.alert.no": "No",
+  "common.alert.sure": "Sure",
   "common.photoActionSheet.title": "Select photo",
   "common.photoActionSheet.takePhoto": "Take Photo",
   "common.photoActionSheet.choosePhoto": "Choose From Library",
