[f/562-i18n] Translations: (!) Group Action Sheet

--- a/BrightID/translations/french.json
+++ b/BrightID/translations/french.json
@@ -124,6 +124,9 @@
   "groups.label.unknownMembers": "Inconnus :",
   "groups.text.noMembers": "Pas de membre connu, invitez quelqu'un...",
   "groups.text.noEligibleConnection": "Aucune connexion existante n'est éligible pour ce groupe. Veuillez réessayer plus tard...",
+  "groups.groupActionSheet.inviteUser": "Inviter un utilisateur",
+  "groups.groupActionSheet.leaveGroup": "Quitter le groupe",
+  "groups.groupActionSheet.cancel": "Annuler",
   "groups.alert.title.inviteSuccess": "Invitation Envoyée",
   "groups.alert.text.inviteSuccess":"Vous avez invité {{name}} avec succès",
   "groups.alert.title.leaveGroup": "Quitter le Groupe",
