--- a/BrightID/translations/english.json
+++ b/BrightID/translations/english.json
@@ -124,6 +124,9 @@
   "groups.label.unknownMembers": "Unknown:",
   "groups.text.noMembers": "No known members, invite some...",
   "groups.text.noEligibleConnection": "No existing connections are eligible for this group, please come back later..",
+  "groups.groupActionSheet.inviteUser": "Invite user",
+  "groups.groupActionSheet.leaveGroup": "Leave group",
+  "groups.groupActionSheet.cancel": "Cancel",
   "groups.alert.title.inviteSuccess": "Successful Invitation",
   "groups.alert.text.inviteSuccess":"You invited {{name}} successfully to the group",
   "groups.alert.title.leaveGroup": "Leave Group",
