[f/562-i18n] Translations: (!) Member Action Sheet

--- a/BrightID/translations/english.json
+++ b/BrightID/translations/english.json
@@ -127,6 +127,9 @@
   "groups.groupActionSheet.inviteUser": "Invite user",
   "groups.groupActionSheet.leaveGroup": "Leave group",
   "groups.groupActionSheet.cancel": "Cancel",
+  "groups.memberActionSheet.addAdmin": "Add Admin",
+  "groups.memberActionSheet.dismissMember": "Dismiss from group",
+  "groups.memberActionSheet.cancel": "Cancel",
   "groups.alert.title.inviteSuccess": "Successful Invitation",
   "groups.alert.text.inviteSuccess":"You invited {{name}} successfully to the group",
   "groups.alert.title.leaveGroup": "Leave Group",
