--- a/BrightID/translations/french.json
+++ b/BrightID/translations/french.json
@@ -127,6 +127,9 @@
   "groups.groupActionSheet.inviteUser": "Inviter un utilisateur",
   "groups.groupActionSheet.leaveGroup": "Quitter le groupe",
   "groups.groupActionSheet.cancel": "Annuler",
+  "groups.memberActionSheet.addAdmin": "Définir comme administrateur",
+  "groups.memberActionSheet.dismissMember": "Retirer du Groupe",
+  "groups.memberActionSheet.cancel": "Annuler",
   "groups.alert.title.inviteSuccess": "Invitation Envoyée",
   "groups.alert.text.inviteSuccess":"Vous avez invité {{name}} avec succès",
   "groups.alert.title.leaveGroup": "Quitter le Groupe",
