[f/562-i18n] Translations: (!!) User creation date

--- a/BrightID/translations/english.json
+++ b/BrightID/translations/english.json
@@ -73,7 +73,8 @@
   "pendingConnections.text.errorExpired": "The QRCode used to connect with {{name}} has expired... please try connecting again.",
   "pendingConnections.text.waiting": "Waiting for data from the profile service",
   "pendingConnections.text.connectWith": "Connect with?",
-  "pendingConnections.tag.newUser": "New User",
+  "pendingConnections.tag.createdAt": "Created {{date}}",
+  "pendingConnections.tag.newUser": "New user",
   "pendingConnections.tag.alreadyConnected": "(already connected)",
   "pendingConnections.label.connections": "Connections",
   "pendingConnections.label.groups": "Groups",
