[f/562-i18n] Translations: (!!) App Link Errors

--- a/BrightID/translations/english.json
+++ b/BrightID/translations/english.json
@@ -169,6 +169,9 @@
   "apps.tag.notVerifiedForApp": "Non-vérifié pour cette application",
   "apps.tag.linked": "Linked",
   "apps.tag.tryAgain": "Try Again",
+  "apps.alert.title.linkApp": "Link App?",
+  "apps.alert.text.linkApp": "Do you want to link your account in {{context}} to your BrightID?",
+  "apps.alert.title.linkingFailed": "App linking failed",
   "apps.alert.title.invalidContext": "Failed",
   "apps.alert.text.invalidContext": "{{context}} is not a valid context!",
   "apps.alert.text.checkWebsite": "To find out more about {{name}}, check out their website!",
@@ -277,6 +280,7 @@
   "common.alert.formIncomplete": "BrightID Form Incomplete",
   "common.alert.ok": "OK",
   "common.alert.cancel": "Cancel",
+  "common.alert.dismiss": "Dismiss",
   "common.alert.yes": "Yes",
   "common.alert.no": "No",
   "common.alert.sure": "Sure",
