--- a/BrightID/translations/french.json
+++ b/BrightID/translations/french.json
@@ -169,7 +169,10 @@
   "apps.tag.notVerifiedForApp": "Non-vérifié pour cette application",
   "apps.tag.linked": "Lié",
   "apps.tag.tryAgain": "Veuillez réessayer",
-  "apps.alert.title.invalidContext": "Echec",
+  "apps.alert.title.linkApp": "Lier l'Application ?",
+  "apps.alert.text.linkApp": "Voulez-vous lier votre compte BrightID à {{context}} ?",
+  "apps.alert.title.linkingFailed": "Échec de la liaison de l'Application",
+  "apps.alert.title.invalidContext": "Échec",
   "apps.alert.text.invalidContext": "{{context}} n'est pas un contexte valide !",
   "apps.alert.text.checkWebsite": "Pour en savoir davantage à propos de {{name}}, visitez leur site web !",
   "apps.alert.button.visitWebsite": "Visiter",
@@ -277,6 +280,7 @@
   "common.alert.formIncomplete": "Formulaire incomplet",
   "common.alert.ok": "OK",
   "common.alert.cancel": "Annuler",
+  "common.alert.dismiss": "Fermer",
   "common.alert.yes": "Oui",
   "common.alert.no": "Non",
   "common.alert.sure": "Oui",
